plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.0'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}


configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'// Querydsl
    annotationProcessor "com.querydsl:querydsl-apt:5.1.0:jakarta" // Querydsl
    annotationProcessor "jakarta.annotation:jakarta.annotation-api" // Querydsl
    annotationProcessor "jakarta.persistence:jakarta.persistence-api" // Querydsl

    implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.10.0' //쿼리 로깅

    implementation 'com.mysql:mysql-connector-j:8.2.0' // mysql
    implementation 'org.springframework.boot:spring-boot-starter-data-redis' // redis

    implementation 'io.jsonwebtoken:jjwt-api:0.11.5' // jwt
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5' // jwt
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // jwt

    implementation 'org.quartz-scheduler:quartz:2.5.0' // Quartz Scheduler

    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
}

tasks.named('test') {
    useJUnitPlatform()
}

clean {
    delete file('src/main/generated') // querydsl
}